# senior_design

./: .gitmodules  README.md  install_packages.bash  nanomap_data_1000.txt  packages.txt  setup.bash  setup.sh
devel/: .catkin  .rosinstall  setup.sh
devel/include/tf2_msgs/: FrameGraphResponse.h
devel/lib/nanomap_ros/: benchmarking_node  nanomap_ros-test  visualization_node
devel/lib/pkgconfig/: gazebo_radar_plugin.pc  nanomap_ros.pc  serial.pc  test_tf2.pc  tf2.pc  tf2_bullet.pc  tf2_eigen.pc  tf2_geometry_msgs.pc  tf2_kdl.pc  tf2_msgs.pc  tf2_py.pc  tf2_ros.pc  tf2_sensor_msgs.pc  tf2_tools.pc  ti_mmwave_rospkg.pc
install/: .rosinstall  _setup_util.py
install/include/tf2_msgs/: FrameGraphRequest.h  LookupTransformAction.h  LookupTransformActionFeedback.h  LookupTransformActionGoal.h  LookupTransformActionResult.h  LookupTransformFeedback.h  LookupTransformGoal.h  LookupTransformResult.h  TF2Error.h  TFMessage.h
install/lib/pkgconfig/: test_tf2.pc  tf2_bullet.pc  tf2_eigen.pc  tf2_geometry_msgs.pc  tf2_msgs.pc  tf2_ros.pc  tf2_sensor_msgs.pc  tf2_tools.pc
install/lib/tf2_ros/: buffer_server  static_transform_publisher
scripts/: takeoff.bash
src/: .rosinstall  .rosinstall.bak  CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/ardrone_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ardrone_config/config/: fake_controllers.yaml  ompl_planning.yaml  quadrotor_hokuyo_utm30lx.srdf  ros_controllers.yaml
src/ardrone_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  h8_gaz.launch  h8_rviz.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/ardrone_helpers/.svn/: wc.db
src/catkin_generated/: generate_cached_setup.py  order_packages.cmake  order_packages.py  setup_cached.sh
src/catkin_generated/installspace/: setup.sh
src/gazebo_models/: CMakeLists.txt  model.sdf  package.xml
src/gazebo_models/include/: gazebo_ros_laser.h
src/gazebo_models/src/: gazebo_ros_laser.cpp  teamH8_plugin.cc
src/gazebo_models/worlds/: test.world
src/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/gtest/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/journey/: CMakeLists.txt  package.xml  pose.py  position_error.py  readLidar.py
src/journey/launch/: amcl_quad.launch  empty_world.launch  quad_2d_nav.launch  spawn_quadrotor.launch
src/journey/maps/: house.bt
src/journey/resource/: costmap_common_params.yaml  quad_2d_nav.rviz
src/journey/urdf/: quadrotor_base.urdf.xacro  (+1 more)
src/laserTest/: README.txt  test.world
src/load_octomap/: CMakeLists.txt  package.xml
src/relaxed_astar/: CMakeLists.txt  package.xml  relaxed_astar_planner_plugin.xml
src/temp_models/: CMakeLists.txt  model.config  model.gazebo  model.sdf  test.launch
src/temp_models/src/: libteamH8_plugin.cc
src/ti_mmwave_rospkg/: CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
(+61 files in other folders)
